--- a/src/Wallabag/UserBundle/Resources/views/Manage/search_form.html.twig
+++ b/src/Wallabag/UserBundle/Resources/views/Manage/search_form.html.twig
@@ -1,4 +1,4 @@
-<form name="search" method="GET" action="{{ path('user-search')}}">
+<form name="search_users" method="GET" action="{{ path('user-search')}}">
     {% if form_errors(form) %}
         <span class="black-text">{{ form_errors(form) }}</span>
     {% endif %}
